# esp32-lilygo-t-display-q224

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: display.rs  main.rs  menu.rs  util.rs
