[package]
name = "t-display"
version = "0.1.0"
authors = ["Robert Chiniquy <rchiniquy@yahoo.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
# debug = true # Symbols are nice and they don't increase the size on Flash
# opt-level = "z" # 1

[features]
# default = [
#   "std",
#   # "embassy",
#   #,  "esp-idf-svc/native"
# ]

# std = [
#   "alloc",
#   # , "esp-idf-svc/binstart", "esp-idf-svc/std"
# ]
# alloc = [
#   #"esp-idf-svc/alloc"
# ]
# # embassy = [
#   "esp-idf-svc/embassy-sync",
#   "esp-idf-svc/critical-section",
#   "esp-idf-svc/embassy-time-driver",
# ]

[dependencies]
# esp-idf-svc = { version = "0.48", default-features = false }
embedded-hal = "0.2.7"
esp-idf-hal = { version = "0.43", default-features = false }
display-interface = "0.5"
display-interface-spi = "0.5"                                #"0.5.0-alpha.1"
mipidsi = "0.7"
log = { version = "0.4", default-features = false }
esp-idf-sys = "0.34"
tinybmp = "0.5"
embedded-graphics = "0.8"

[build-dependencies]
embuild = "0.31.3"

[patch.crates-io]
# patching mipidsi to get the latest display-interface and embedded-hal to line up
mipidsi = { git = 'https://github.com/almindor/mipidsi.git' }
